# qubot

./: .coverage  .dockerignore  .env.example  .gitignore  AGENT.md  AGENTS.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  test_akshare.py
.ai/: antigravity.md
.github/workflows/: deploy.yml  test.yml
app/: main.py
app/api/: __init__.py  auth.py  routes.py
app/bots/: bot_spec.py  dispatcher.py  middleware.py  registry.py  webhook_setup.py
app/core/: bot.py  config.py  database.py  logger.py  rate_limiter.py  security.py  stock_links.py  telegram_utils.py  timezone.py
app/providers/: base.py  claude.py  gemini.py  glm.py  groq.py  minimax.py  nvidia.py  openai.py  openrouter.py
app/services/: burst_monitor.py  chip_distribution.py  content_filter.py  crawler.py  daban_service.py  daban_simulator.py  forward_filters.py  github.py  history_service.py  hot_words.py  limit_up.py  market_ai_analysis.py  market_analyzer.py  market_keywords.py  market_report.py  message_compressor.py  monitor.py  (+13 more)
docs/: FAIL2BAN_SETUP.md  api.md  db-debug.md
scripts/: generate-session.js  generate_session.py  profile_scanner.py  setup-webhook.js  setup_webhook.py  setup_webhook_agent.py  setup_webhook_ai.py  setup_webhook_monitor.py  setup_webhook_rss.py  telethon_demo.py  test-api.sh  test_scanner_kuangbiao.py  test_scanner_startup.py
src/: config.js  index.js  monitor.js
test/: ai-jobs.test.js  ai-settings.test.js  api-ai-jobs.test.js  auth.test.js  monitor-flow.test.js
tests/: conftest.py
web/: index.html
(+261 files in other folders)
